# 6502

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
cli/: main.cpp
include/emulator/: placeholder.hpp
src/: placeholder.cpp
tests/: placeholder_test.cpp
